SuperPhotonCamara v.2